Restructured Subscriptions Data Structure