@@ -1,19 +1,22 @@
 package com.subscription_redis.service;
 
+import com.subscription_redis.dto.AviationDataSubscriptionsResponse;
 import com.subscription_redis.dto.SubscriptionRequest;
-import com.subscription_redis.dto.SubscriptionResponse;
 
+import com.subscription_redis.dto.SubscriptionResponse;
+import com.subscription_redis.model.AviationDataSubscriptions;
 import com.subscription_redis.model.Subscription;
+import com.subscription_redis.model.emailAlreadySubscribedException;
 import com.subscription_redis.repository.SubscriptionRepository;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -31,34 +34,59 @@ public class SubscriptionService {
     }
 
     // Save Operation
-    public void saveSubscription(SubscriptionRequest subscriptionRequest) {
+    public void saveSubscription(SubscriptionRequest subscriptionRequest) throws emailAlreadySubscribedException {
+        String aviationDataID = subscriptionRequest.getAviationDataID();
+
         Subscription subscription = Subscription.builder()
-                .id("1234")
-                .aviationDataID(subscriptionRequest.getAviationDataID())
                 .name(subscriptionRequest.getName())
                 .email(subscriptionRequest.getEmail())
                 .build();
-        subscriptionRepository.save(subscription);
-        log.info("Subscription {} is saved", subscription.getId());
+
+        Optional<AviationDataSubscriptions> opt = subscriptionRepository.findById(aviationDataID);
+
+        AviationDataSubscriptions aviationDataSubscriptions;
+        aviationDataSubscriptions = opt.orElseGet(() -> AviationDataSubscriptions.builder()
+                .aviationDataID(aviationDataID)
+                .subscriptions(new ArrayList<>())
+                .build());
+
+        aviationDataSubscriptions.addSubscription(subscription);
+        subscriptionRepository.save(aviationDataSubscriptions);
+        log.info("Subscription {} to {} is saved", subscription.getEmail(), aviationDataID);
     }
 
     // Read Operation
-    public List<SubscriptionResponse> fetchSubscriptionList() {
-
-        Iterable<Subscription> subscriptions = subscriptionRepository.findAll();
-
-        List<SubscriptionResponse> subscriptionResponseList = new ArrayList<>();
-        return StreamSupport.stream(subscriptions.spliterator(), false)
-                .map(this::mapToSubscriptionResponse)
-                .collect(Collectors.toList());
+    public List<AviationDataSubscriptionsResponse> fetchSubscriptionList() {
+        return StreamSupport
+                .stream(subscriptionRepository.findAll().spliterator(), false)
+                .map(AviationDataSubscriptions::convertToResponse)
+                .toList();
     }
 
-    private SubscriptionResponse mapToSubscriptionResponse(Subscription subscription) {
-        return SubscriptionResponse.builder()
-                .id(subscription.getId())
-                .aviationDataID(subscription.getAviationDataID())
-                .name(subscription.getName())
-                .email(subscription.getEmail())
-                .build();
+    public AviationDataSubscriptionsResponse fetchSubscriptions(String aviationDataID) throws NullPointerException {
+        return Objects.requireNonNull(subscriptionRepository.findById(aviationDataID).orElseGet(() -> null)).convertToResponse();
     }
+
+    // Pending:
+        // Add Subscription
+        // Remove Subscription
+
+//    public List<SubscriptionResponse> fetchSubscriptionList() {
+//
+//        Iterable<Subscription> subscriptions = subscriptionRepository.findAll();
+//
+//        List<SubscriptionResponse> subscriptionResponseList = new ArrayList<>();
+//        return StreamSupport.stream(subscriptions.spliterator(), false)
+//                .map(this::mapToSubscriptionResponse)
+//                .collect(Collectors.toList());
+//    }
+//
+//    private SubscriptionResponse mapToSubscriptionResponse(Subscription subscription) {
+//        return SubscriptionResponse.builder()
+//                .id(subscription.getId())
+//                .aviationDataID(subscription.getAviationDataID())
+//                .name(subscription.getName())
+//                .email(subscription.getEmail())
+//                .build();
+//    }
 }
